--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <link href="style/css/prettify.css" rel="stylesheet">
 <link href="style.css" rel="stylesheet">
 <link href="style/css/color/green.css" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Raleway:400,800,700,600,500,300' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Raleway:400,800,700,600,500,300' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link href="style/type/fontello.css" rel="stylesheet">
 <link href="style/type/budicons.css" rel="stylesheet">
@@ -23,11 +23,6 @@
   <script src="style/js/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
-  <style>
-    .about{
-      text-align: justify;
-    }
-  </style>
 </head>
 <body class="full-layout">
 <div id="preloader"><div id="status"><div class="spinner"></div></div></div>
@@ -173,11 +168,13 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
+                    <p class="cbp-l-caption-title captionTitle">Oladaa</p>
+                    <p>A local event finder specifically geared towards FitBit users.</p>
                     <a target="_blank" href="https://www.oladaa.com">
-                      <span class="cbp-l-caption-title liveLink">Live Site</span>
+                      <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
                     <a target="_blank" href="https://github.com/Learning-Fuze/C2.17_fitbit_companion">
-                      <span class="cbp-l-caption-title gitLink">GitHub</span>
+                      <span class="cbp-l-caption-title gitLink captionLink btn btn-primary">GitHub</span>
                     </a>
                   </div>
                 </div>
@@ -188,11 +185,13 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
+                    <p class="cbp-l-caption-title captionTitle">Oladaa</p>
+                    <p>A local event finder specifically geared towards FitBit users.</p>
                     <a target="_blank" href="https://dev.seanmeedev.com/grab_a_beer">
-                      <span class="cbp-l-caption-title liveLink">Live Site</span>
+                      <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
                     <a target="_blank" href="https://github.com/enuber/C2.17_hackathon">
-                      <span class="cbp-l-caption-title gitLink">GitHub</span>
+                      <span class="cbp-l-caption-title gitLink captionLink btn btn-primary">GitHub</span>
                     </a>
                   </div>
                 </div>
@@ -203,11 +202,13 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
+                    <p class="cbp-l-caption-title captionTitle">Oladaa</p>
+                    <p>A local event finder specifically geared towards FitBit users.</p>
                     <a target="_blank" href="https://dev.seanmeedev.com/shaolin_busters">
-                      <span class="cbp-l-caption-title liveLink">Live Site</span>
+                      <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
                     <a target="_blank" href="https://github.com/miashore/C2.17_tictactoe">
-                      <span class="cbp-l-caption-title gitLink">GitHub</span>
+                      <span class="cbp-l-caption-title gitLink captionLink btn btn-primary">GitHub</span>
                     </a>
                   </div>
                 </div>
@@ -218,11 +219,13 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
+                    <p class="cbp-l-caption-title captionTitle">Oladaa</p>
+                    <p>A local event finder specifically geared towards FitBit users.</p>
                     <a target="_blank" href="https://dev.seanmeedev.com/calculator">
-                      <span class="cbp-l-caption-title liveLink">Live Site</span>
+                      <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
                     <a target="_blank" href="https://github.com/SeanMee86/calculator">
-                      <span class="cbp-l-caption-title gitLink">GitHub</span>
+                      <span class="cbp-l-caption-title gitLink captionLink btn btn-primary">GitHub</span>
                     </a>
                   </div>
                 </div>
@@ -233,11 +236,13 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
+                    <p class="cbp-l-caption-title captionTitle">Oladaa</p>
+                    <p>A local event finder specifically geared towards FitBit users.</p>
                     <a target="_blank" href="https://dev.seanmeedev.com/dks_memory_match">
-                      <span class="cbp-l-caption-title liveLink">Live Site</span>
+                      <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
                     <a target="_blank" href="https://github.com/SeanMee86/memory_match">
-                      <span class="cbp-l-caption-title gitLink">GitHub</span>
+                      <span class="cbp-l-caption-title gitLink captionLink btn btn-primary">GitHub</span>
                     </a>
                   </div>
                 </div>
