--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <ul>
           <li data-transition="fade"> <img src="style/images/dummy.png" alt="slidebg1" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="repeat">
             <h1 class="tp-caption caption large sfb textShadow" data-x="center" data-y="center" data-voffset="-25" data-speed="900" data-start="1000" data-endspeed="100" data-easing="Sine.easeOut">Hi I'm Sean</h1>
-            <h1 class="tp-caption smallText tp-fade fadeout tp-resizeme textShadow" data-x="center" data-y="center" data-voffset="25" data-speed="100"
+            <h1 class="tp-caption smallText tp-fade fadeout tp-resizeme textShadow mobileText" data-x="center" data-y="center" data-voffset="25" data-speed="100"
 			data-start="1500"
 			data-easing="Power4.easeOut"
 			data-splitin="chars"
@@ -74,7 +74,7 @@
 			data-endspeed="100"
 			data-endeasing="Power1.easeOut"
 			style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">I'm a front and back end developer with a passion</h1>
-            <h1 class="tp-caption smallText tp-fade fadeout tp-resizeme textShadow" data-x="center" data-y="320" data-voffset="25" data-speed="100"
+            <h1 class="tp-caption smallText tp-fade fadeout tp-resizeme textShadow mobileText" data-x="center" data-y="320" data-voffset="25" data-speed="100"
                 data-start="2500"
                 data-easing="Power4.easeOut"
                 data-splitin="chars"
