--- a/index.html
+++ b/index.html
@@ -198,40 +198,6 @@
               </div>
             </li>
             <li class="cbp-item frame still-life cbp-caption">
-              <div class="cbp-caption-defaultWrap"> <img src="style/images/shaolin_busters.png" alt=""> </div>
-              <div class="cbp-caption-activeWrap">
-                <div class="cbp-l-caption-alignCenter">
-                  <div class="cbp-l-caption-body">
-                    <p class="cbp-l-caption-title captionTitle">Shaolin Busters</p>
-                    <p>An online tic-tac-toe game that implements password match making for users to play with their friends.</p>
-                    <a target="_blank" href="https://dev.seanmeedev.com/shaolin_busters">
-                      <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
-                    </a>
-                    <a target="_blank" href="https://github.com/miashore/C2.17_tictactoe">
-                      <span class="cbp-l-caption-title gitLink captionLink btn btn-primary">GitHub</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class="cbp-item frame still-life cbp-caption">
-              <div class="cbp-caption-defaultWrap"> <img src="style/images/calculator.png" alt=""> </div>
-              <div class="cbp-caption-activeWrap">
-                <div class="cbp-l-caption-alignCenter">
-                  <div class="cbp-l-caption-body">
-                    <p class="cbp-l-caption-title captionTitle">Calculator</p>
-                    <p>An easy to use online calculator that performs basic arithmetic for the user.</p>
-                    <a target="_blank" href="https://dev.seanmeedev.com/calculator">
-                      <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
-                    </a>
-                    <a target="_blank" href="https://github.com/SeanMee86/calculator">
-                      <span class="cbp-l-caption-title gitLink captionLink btn btn-primary">GitHub</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class="cbp-item frame still-life cbp-caption">
               <div class="cbp-caption-defaultWrap"> <img src="style/images/dark_souls.png" alt=""> </div>
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
@@ -258,7 +224,7 @@
 
     <section id="about">
       <div class="box">
-        <h2 class="section-title">Who is Behind All This</h2>
+        <h2 class="section-title">A Little about Mee</h2>
         <div class="row">
 	      <div class="col-md-5 col-md-push-7 col-sm-12">
             <figure class="frame"><img src="https://scontent-sjc2-1.xx.fbcdn.net/v/t1.0-9/421324_10151155081396192_1853102715_n.jpg?oh=fc8f9196bb8128dc945d0f70d6d1776b&oe=59B2D757" alt="" /></figure>
@@ -285,21 +251,21 @@
         <p>I am interested in any new and exciting ways to test and grow my skills as a developer. Feel free to call or email with any opportunities you have where my skills can be of help.</p>
         <div class="divide20"></div>
         <div class="row text-center services-2">
-          <div id="address" class="col-md-3 col-sm-6"> <i class="budicon-map"></i>
-            <!--<p>Moon Street Light Avenue <br />-->
-              <!--14/05 Jupiter, JP 80630</p>-->
-          </div>
-          <div id="home_phone" class="col-md-3 col-sm-6"> <i class="budicon-telephone"></i>
+          <!--<div id="address" class="col-md-3 col-sm-6"> <i class="budicon-map"></i>-->
+            <!--&lt;!&ndash;<p>Moon Street Light Avenue <br />&ndash;&gt;-->
+              <!--&lt;!&ndash;14/05 Jupiter, JP 80630</p>&ndash;&gt;-->
+          <!--</div>-->
+          <div id="home_phone" class="col-md-4 col-sm-6"> <i class="budicon-telephone"></i>
             <!--<p>00 (123) 456 78 90 <br />-->
               <!--00 (987) 654 32 10 </p>-->
           </div>
-          <div id="cell_phone" class="col-md-3 col-sm-6"> <i class="budicon-mobile"></i>
-            <!--<p>00 (123) 456 78 90 <br />-->
-              <!--00 (987) 654 32 10 </p>-->
-          </div>
-          <div id="email" class="col-md-3 col-sm-6"> <i class="budicon-mail"></i>
+          <div id="email" class="col-md-4 col-sm-6"> <i class="budicon-mail"></i>
             <!--<p> <a class="nocolor" href="mailto:#">manager@email.com</a> <br />-->
-              <!--<a class="nocolor" href="mailto:#">asistant@email.com</a> </p>-->
+            <!--<a class="nocolor" href="mailto:#">asistant@email.com</a> </p>-->
+          </div>
+          <div id="cell_phone" class="col-md-4 col-sm-6"> <i class="budicon-mobile"></i>
+            <!--<p>00 (123) 456 78 90 <br />-->
+              <!--00 (987) 654 32 10 </p>-->
           </div>
         </div>
         <!-- /.services-2 -->
