--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           <!-- /column -->
           <div class="col-md-7 col-md-pull-5 col-sm-12 about">
             <p class="lead">Hello and welcome to my portfolio. My name is Sean and I design and build web applications. </p>
-            <p>I've had an interest in computer technologies for as long as I can remember. I started learning html and building websites at the age of 11.  During an internship at Cal State Fullerton I managed large sets of data and found a passion for data management and organization.</p>
+            <p>I've had an interest in computer technologies for as long as I can remember. I started learning html and building gaming walkthrough sites at the age of 11.  During an internship at Cal State Fullerton I managed large sets of data and found a passion for data management and organization.</p>
             <p>I wanted to find a way to combine my love of coding and data handling so I decided to seek advice from friends and family in the tech industry.  That was when I found out about back-end development.  I soon found my calling working with server-side coding languages. </p>
             <p>I decided to completely devote myself to becoming a developer and recently completed an advanced web development program called LearningFuze where I built multiple applications in a real world team environment that utilized languages such as JavaScript, PHP, MySQL, Ubuntu, HTML, CSS, React.js, etc.</p>
           </div>
@@ -251,21 +251,14 @@
         <p>I am interested in any new and exciting ways to test and grow my skills as a developer. Feel free to call or email with any opportunities you have where my skills can be of help.</p>
         <div class="divide20"></div>
         <div class="row text-center services-2">
-          <!--<div id="address" class="col-md-3 col-sm-6"> <i class="budicon-map"></i>-->
-            <!--&lt;!&ndash;<p>Moon Street Light Avenue <br />&ndash;&gt;-->
-              <!--&lt;!&ndash;14/05 Jupiter, JP 80630</p>&ndash;&gt;-->
-          <!--</div>-->
-          <div id="home_phone" class="col-md-4 col-sm-6"> <i class="budicon-telephone"></i>
-            <!--<p>00 (123) 456 78 90 <br />-->
-              <!--00 (987) 654 32 10 </p>-->
+          <div id="home_phone" class="col-md-4 col-sm-6">
+            <i class="budicon-telephone"></i>
           </div>
-          <div id="email" class="col-md-4 col-sm-6"> <i class="budicon-mail"></i>
-            <!--<p> <a class="nocolor" href="mailto:#">manager@email.com</a> <br />-->
-            <!--<a class="nocolor" href="mailto:#">asistant@email.com</a> </p>-->
+          <div id="email" class="col-md-4 col-sm-6">
+            <i class="budicon-mail"></i>
           </div>
-          <div id="cell_phone" class="col-md-4 col-sm-6"> <i class="budicon-mobile"></i>
-            <!--<p>00 (123) 456 78 90 <br />-->
-              <!--00 (987) 654 32 10 </p>-->
+          <div id="cell_phone" class="col-md-4 col-sm-6">
+            <i class="budicon-mobile"></i>
           </div>
         </div>
         <!-- /.services-2 -->
