--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     
     <section id="contact">
       <div class="box">
-        <h2 class="section-title">Get in Touch with Me</h2>
+        <h2 class="section-title">Get in Touch with Mee</h2>
         <p>I am interested in any new and exciting ways to test and grow my skills as a developer. Feel free to call or email with any opportunities you have where my skills can be of help.</p>
         <div class="divide20"></div>
         <div class="row text-center services-2">
