--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <!-- /.navbar-collapse -->
     <div id="elsewhere" style="display:none;">
-      <h1>Me, Elsewhere</h1>
+      <h1>Mee, Elsewhere</h1>
       <div class="divide20"></div>
       <ul class="social">
         <li><a target="_blank" href="https://twitter.com/SeanMee1"><i class="icon-s-twitter"></i></a></li>
