updated github location

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <a target="_blank" href="https://www.oladaa.com">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
-                    <a target="_blank" href="https://github.com/Learning-Fuze/C2.17_fitbit_companion">
+                    <a target="_blank" href="https://github.com/miashore/oladaa">
                       <span class="cbp-l-caption-title gitLink captionLink btn btn-primary">GitHub</span>
                     </a>
                   </div>
