updated links to applications

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                   <div class="cbp-l-caption-body">
                     <p class="cbp-l-caption-title captionTitle">Grab A Beer</p>
                     <p>An app designed to find restaurants and bars serving a users choice of beer near their current or desired location.</p>
-                    <a target="_blank" href="https://dev.seanmeedev.com/grab_a_beer">
+                    <a target="_blank" href="https://seanmeedev.com/grab_a_beer">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
                     <a target="_blank" href="https://github.com/enuber/C2.17_hackathon">
@@ -204,7 +204,7 @@
                   <div class="cbp-l-caption-body">
                     <p class="cbp-l-caption-title captionTitle">Memory Match</p>
                     <p>A memory match card game based on the characters from the FromSoft games Dark Souls and Bloodborne.</p>
-                    <a target="_blank" href="https://dev.seanmeedev.com/dks_memory_match">
+                    <a target="_blank" href="https://seanmeedev.com/dks_memory_match">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
                     <a target="_blank" href="https://github.com/SeanMee86/dks_memory_match">
