fixed about image

--- a/index.html
+++ b/index.html
@@ -198,40 +198,6 @@
               </div>
             </li>
             <li class="cbp-item frame still-life cbp-caption">
-              <div class="cbp-caption-defaultWrap"> <img src="style/images/shaolin_busters.png" alt=""> </div>
-              <div class="cbp-caption-activeWrap">
-                <div class="cbp-l-caption-alignCenter">
-                  <div class="cbp-l-caption-body">
-                    <p class="cbp-l-caption-title captionTitle">Shaolin Busters</p>
-                    <p>An online tic-tac-toe game that implements password match making for users to play with their friends.</p>
-                    <a target="_blank" href="https://dev.seanmeedev.com/shaolin_busters">
-                      <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
-                    </a>
-                    <a target="_blank" href="https://github.com/miashore/C2.17_tictactoe">
-                      <span class="cbp-l-caption-title gitLink captionLink btn btn-primary">GitHub</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class="cbp-item frame still-life cbp-caption">
-              <div class="cbp-caption-defaultWrap"> <img src="style/images/calculator.png" alt=""> </div>
-              <div class="cbp-caption-activeWrap">
-                <div class="cbp-l-caption-alignCenter">
-                  <div class="cbp-l-caption-body">
-                    <p class="cbp-l-caption-title captionTitle">Calculator</p>
-                    <p>An easy to use online calculator that performs basic arithmetic for the user.</p>
-                    <a target="_blank" href="https://dev.seanmeedev.com/calculator">
-                      <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
-                    </a>
-                    <a target="_blank" href="https://github.com/SeanMee86/calculator">
-                      <span class="cbp-l-caption-title gitLink captionLink btn btn-primary">GitHub</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class="cbp-item frame still-life cbp-caption">
               <div class="cbp-caption-defaultWrap"> <img src="style/images/dark_souls.png" alt=""> </div>
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
@@ -261,7 +227,7 @@
         <h2 class="section-title">Who is Behind All This</h2>
         <div class="row">
 	      <div class="col-md-5 col-md-push-7 col-sm-12">
-            <figure class="frame"><img src="https://scontent-sjc2-1.xx.fbcdn.net/v/t1.0-9/421324_10151155081396192_1853102715_n.jpg?oh=fc8f9196bb8128dc945d0f70d6d1776b&oe=59B2D757" alt="" /></figure>
+            <figure class="frame"><img src="style/images/about_pic.jpg" alt="" /></figure>
           </div>
           <!-- /column -->
           <div class="col-md-7 col-md-pull-5 col-sm-12 about">
