moving to github

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <h2 class="section-title">A Little about Mee</h2>
         <div class="row">
 	      <div class="col-md-5 col-md-push-7 col-sm-12">
-            <figure class="frame"><img src="https://scontent-sjc2-1.xx.fbcdn.net/v/t1.0-9/421324_10151155081396192_1853102715_n.jpg?oh=fc8f9196bb8128dc945d0f70d6d1776b&oe=59B2D757" alt="" /></figure>
+            <figure class="frame"><img src="style/images/about_pic.jpg" alt="" /></figure>
           </div>
           <!-- /column -->
           <div class="col-md-7 col-md-pull-5 col-sm-12 about">
