--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <script src="style/js/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="scroll.js"></script>
 </head>
 <body class="full-layout">
 <div id="preloader"><div id="status"><div class="spinner"></div></div></div>
@@ -227,7 +229,7 @@
         <h2 class="section-title">A Little about Mee</h2>
         <div class="row">
 	      <div class="col-md-5 col-md-push-7 col-sm-12">
-            <figure class="frame"><img src="https://scontent-sjc2-1.xx.fbcdn.net/v/t1.0-9/421324_10151155081396192_1853102715_n.jpg?oh=fc8f9196bb8128dc945d0f70d6d1776b&oe=59B2D757" alt="" /></figure>
+            <figure class="frame"><img src="profile.jpg" alt="" /></figure>
           </div>
           <!-- /column -->
           <div class="col-md-7 col-md-pull-5 col-sm-12 about">
@@ -319,7 +321,9 @@
     <!-- /#contact -->
     
     <footer class="footer box">
-      <p class="pull-left">© 2017 Sean Mee. All rights reserved</p>
+      <p class="pull-left">© <script type="text/javascript">
+          document.write(new Date().getFullYear());
+      </script> Sean Mee. All rights reserved</p>
       <ul class="social pull-right">
         <li><a target="_blank" href="https://twitter.com/SeanMee1"><i class="icon-s-twitter"></i></a></li>
         <li><a target="_blank" href="https://github.com/SeanMee86"><i class="icon-s-github"></i></a></li>
