--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="body-wrapper">
   <nav class="navbar navbar-default" role="navigation">
     <div class="navbar-header"> <a class="btn responsive-menu" data-toggle="collapse" data-target=".navbar-collapse"><i></i></a>
-      <div class="navbar-brand text-center"> <a href="index.html"><img src="style/images/sm_logo_med.png" alt="" data-src="style/images/sm_logo_med.png" data-ret="style/images/sm_logo_mobile.png" class="retina" /></a> </div>
+      <div class="navbar-brand text-center"> <a href="index.html"><img src="style/images/sm_logo_med.png" alt="" data-src="style/images/sm_logo_med.png" data-ret="style/images/sm_logo_mobile.png" class="retina" width="100%" /></a> </div>
       <!-- /.navbar-brand --> 
     </div>
     <!-- /.navbar-header -->
