--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                   <div class="cbp-l-caption-body">
                     <p class="cbp-l-caption-title captionTitle">Memory Match</p>
                     <p>A memory match card game based on the characters from the FromSoft games Dark Souls and Bloodborne.</p>
-                    <a target="_blank" href="https://seanmeedev.com/dks_memory_match">
+                    <a target="_blank" href="/dks_memory_match">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
                     <a target="_blank" href="https://github.com/SeanMee86/dks_memory_match">
