removed target blank from unavailable projects

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   <div class="cbp-l-caption-body">
                     <p class="cbp-l-caption-title captionTitle">Oladaa</p>
                     <p>An app designed to help FitBit users find local events based on their interests and activity level.</p>
-                    <a target="_blank" href="/unavailable.html">
+                    <a href="/unavailable.html">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
                     <a target="_blank" href="https://github.com/miashore/oladaa">
@@ -190,7 +190,7 @@
                   <div class="cbp-l-caption-body">
                     <p class="cbp-l-caption-title captionTitle">Grab A Beer</p>
                     <p>An app designed to find restaurants and bars serving a users choice of beer near their current or desired location.</p>
-                    <a target="_blank" href="/unavailable.html">
+                    <a href="/unavailable.html">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
                     <a target="_blank" href="https://github.com/enuber/C2.17_hackathon">
