--- a/index.html
+++ b/index.html
@@ -167,16 +167,16 @@
         <div id="grid-container" class="cbp-l-grid-masonry">
           <ul>
             <li class="cbp-item frame still-life cbp-caption">
-              <div class="cbp-caption-defaultWrap"> <img src="style/images/oladaa.png" alt=""> </div>
+              <div class="cbp-caption-defaultWrap"> <img src="style/images/ow-heroes.png" alt=""> </div>
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <p class="cbp-l-caption-title captionTitle">Oladaa</p>
-                    <p>An app designed to help FitBit users find local events based on their interests and activity level.</p>
-                    <a href="/unavailable.html">
+                    <p class="cbp-l-caption-title captionTitle">Overwatch Heroes</p>
+                    <p>A React and Axios app that helps the user learn about the heroes of Overwatch.</p>
+                    <a href="/ow-heroes">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
-                    <a target="_blank" href="https://github.com/miashore/oladaa">
+                    <a target="_blank" href="https://github.com/SeanMee86/ow-heroes">
                       <span class="cbp-l-caption-title gitLink captionLink btn btn-primary">GitHub</span>
                     </a>
                   </div>
