added target blank

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   <div class="cbp-l-caption-body">
                     <p class="cbp-l-caption-title captionTitle">Overwatch Heroes</p>
                     <p>A React and Axios app that helps the user learn about the heroes of Overwatch.</p>
-                    <a href="/ow-heroes">
+                    <a target="_blank" href="/ow-heroes">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
                     <a target="_blank" href="https://github.com/SeanMee86/ow-heroes">
