fixed ow-heroes github link

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <a target="_blank" href="/ow-heroes">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
-                    <a target="_blank" href="https://github.com/SeanMee86/ow-heroes">
+                    <a target="_blank" href="https://github.com/SeanMee86/ow-react">
                       <span class="cbp-l-caption-title gitLink captionLink btn btn-primary">GitHub</span>
                     </a>
                   </div>
