adding shaolin busters

--- a/index.html
+++ b/index.html
@@ -167,16 +167,16 @@
         <div id="grid-container" class="cbp-l-grid-masonry">
           <ul>
             <li class="cbp-item frame still-life cbp-caption">
-              <div class="cbp-caption-defaultWrap"> <img src="style/images/ow-heroes.png" alt=""> </div>
+              <div class="cbp-caption-defaultWrap"> <img src="style/images/shaolin_busters.png" alt=""> </div>
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <p class="cbp-l-caption-title captionTitle">Overwatch Heroes</p>
-                    <p>A React and Axios app that helps the user learn about the heroes of Overwatch.</p>
-                    <a target="_blank" href="/ow-heroes">
+                    <p class="cbp-l-caption-title captionTitle">Shaolin Tic Tac Toe</p>
+                    <p>A FireBase tic tac toe game, enter in a password with a remote friend and battle it out!</p>
+                    <a target="_blank" href="/shaolin_busters">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
-                    <a target="_blank" href="https://github.com/SeanMee86/ow-react">
+                    <a target="_blank" href="https://github.com/SeanMee86/ticTacToe">
                       <span class="cbp-l-caption-title gitLink captionLink btn btn-primary">GitHub</span>
                     </a>
                   </div>
