--- a/index.html
+++ b/index.html
@@ -184,16 +184,16 @@
               </div>
             </li>
             <li class="cbp-item frame still-life cbp-caption">
-              <div class="cbp-caption-defaultWrap"> <img src="style/images/ow-heroes.png" alt=""> </div>
+              <div class="cbp-caption-defaultWrap"> <img src="style/images/calculatorjs.png" alt=""> </div>
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <p class="cbp-l-caption-title captionTitle">Overwatch Heroes</p>
-                    <p>A React and Axios app that helps the user learn about the heroes of Overwatch.</p>
-                    <a target="_blank" href="/ow-heroes">
+                    <p class="cbp-l-caption-title captionTitle">JavaScript Calculator</p>
+                    <p>A Calculator built out to handle all basic arithmetic and error handling.</p>
+                    <a target="_blank" href="/calculatorJS">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
-                    <a target="_blank" href="https://github.com/SeanMee86/ow-react">
+                    <a target="_blank" href="https://github.com/SeanMee86/calculatorJS">
                       <span class="cbp-l-caption-title gitLink captionLink btn btn-primary">GitHub</span>
                     </a>
                   </div>
